--- a/ScholarPortal/compose/services.yml
+++ b/ScholarPortal/compose/services.yml
@@ -16,6 +16,8 @@ services:
     build: ./../../ScholarPortal.Services.Employees
     container_name: employees-service
     restart: unless-stopped
+    stdin_open: true
+    tty: true
     ports:
       - 5001:80
     networks:
@@ -25,8 +27,11 @@ services:
     build: ./../../ScholarPortal.Services.Identity
     container_name: identity-service
     restart: unless-stopped
+    stdin_open: true
+    tty: true
     ports:
       - 5002:80
+      - 5003:5001
     networks:
       - sportal
 
